2015-07-25 Martin Grønholdt

* rest/gpio.c (create_enabled_response): Initialize gpio array to 0.
* slighttp/htp-request.c (http_parse_headers): Chech for NULL pointer.
* tools/ftoa.c (ftoa): Braindead infinite loop and non working algo fixed.
* slighttp/http-fs.c (http_fs_head_handler): Check for MIME type overflow.
* net/tcp.c (tcp_listen): Fixed some pointer checks.
*			(tcp_free):  Fixed some pointer checks.
* fs/zip.c (zip_free_header): Check if the file_hdr is allocated.
*		   (zip_find_file_header): Handle errors correctly.
* net/wifi_connect.c (timeout_cb): Fixed an array's size.


2015-07-23 Martin Grønholdt

* fs/fs.c (fs_init): Output flash ROM size.
* fs/int_flash.c: Added flash_size.

2015-07-22 Martin Grønholdt

* slighttp/http-response (http_process_response): Process request buffer entries.
* fs/index.html: Corrected toggle function.
* fs/zip.c (zip_file_hdr): More debug output.
*		   (init_zip): Fixed zero termination bug.
* slighttp/http.h: Added HTTP_REQUEST_BUFFER_SIZE.
* rest/net-names.c (rest_net_names_get_handler): Set request->response.message_size.
* net/tcp.c (tcp_send): Throw an error if already sending.
* slighttp/http.c (init_http): Init request buffer, fixed boolean error when calling tcp_listen.
* user_main.c (connected): Start the timer after the web server.
* slighttp/http-tcp.*: Added request buffer and response mutex.
* tools/ring.c (ring_pop_front): Fixed dereferencing void pointer. 
* slighttp/http-request.c (http_parse_headers): Print message when debugging.

2015-07-19 Martin Grønholdt

* rest/network.c (rest_network_put_handler): Handle status code properly.
* rest/net-passwd.c (rest_net_passwd_put_handler): Handle status code properly.
* rest/gpio.c (rest_gpio_put_handler): Handle status code properly.

2015-07-15 Martin Grønholdt

* Makefile: Added flashfs to only flash file system.
*		   (checkdirs): Added some missing directories.
* fs/index.html: Created on/of button.
* fs/admin.html: Removed file.