@@ -75,11 +75,11 @@
 /**
  * @brief Print debug info on the serial port.
  */
-#define DEBUG
+//#define DEBUG
 /**
  * @brief Print memory allocation info.
  */
-#define DEBUG_MEM
+//#define DEBUG_MEM
 /**
  * @brief List memory allocations.
  */
@@ -87,7 +87,7 @@
 /**
  * @brief Mostly shut up output from the SDK.
  */
-#define SDK_DEBUG
+//#define SDK_DEBUG
 
 /**
  * @brief Customised print function.
